2005-02-22  Daniel Steffen  <das@users.sourceforge.net>

	* macosx/tkMacOSXDialog.c (Tk_GetSaveFileObjCmd, NavServicesGetFile):
	fixed encoding problems with -initialfile & -filetypes and
	corrected potential buffer overrun with -initialdir/-initialfile.
	[Bug 1146057]

2005-02-16  Mo DeJong  <mdejong@users.sourceforge.net>

	* doc/wm.n: Add documentation for -fullscreen attribute.
	* tests/winWm.test: Add -fullscreen to wm attribute
	usage message.
	* tests/wm.test: Add -fullscreen to wm attribute
	usage message. Add -fullscreen attribute test cases
	for Windows.
	* win/tkWinWm.c (WmInfo, UpdateWrapper, TkpWmSetFullScreen,
	WmAttributesCmd, UpdateGeometryInfo):
	Implement TIP 223 [wm attributes -fullscreen].

2005-02-14  Vince Darley  <vincentdarley@users.sourceforge.net>

	* generic/tkText.c: 
	* generic/tkText.h: 
	* generic/tkTextDisp.c: 
	* generic/tkTextIndex.c: 
	* generic/tkTextBTree.c: 
	* doc/text.n:
	* tests/textDisp.test: 
	* tests/textIndex.test: fix of longstanding elide problem 
	when eliding a newline without eliding the entire logical 
	line. [Bug 443848]

2005-02-14  Jeff Hobbs  <jeffh@ActiveState.com>

	* doc/options.n: note -cursor {} behavior. [Bug 965618]

2005-02-14  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* tests/all.tcl: Add a [package require Tk] so that a missing
	display causes an early failure and keeps the error trace short.
	Issue observed in [FRQ 11122147], even though that's unrelated.

2005-02-11  Jeff Hobbs  <jeffh@ActiveState.com>

	* library/panedwindow.tcl (::tk::panedwindow::Cursor): check
	window existence on delayed call. [Bug 949792]

	* doc/text.n: note 'image' key in 'dump' command. [Bug 1115907]

	* win/tkWinWm.c (TkWinGetIcon): fix toplevel retrieval for
	determining icon ref (potential crash). [Bug 1105738]

	* generic/tkCanvBmap.c (ConfigureBitmap, ComputeBitmapBbox): Fixed
	possible crash with disabled bmap and bbox handling [Bug 1119460]
	(BitmapToPostscript): made aware of various bitmap types
